--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <script src="./classes/Game.js"></script>
   <script src="./classes/Player.js"></script>
   <script src="./app.js"></script>
 </body>
